Added data section

--- a/2nd year report/Year2report.tex
+++ b/2nd year report/Year2report.tex
@@ -92,7 +92,7 @@ For the past two years, I have been researching logistics related to offshore wi
 
 The complexity with these logistics comes from various factors, the first being the severe impact that weather conditions can have on when operational tasks can be completed. These projects take place on open sea, where weather can often be rougher than on land. In addition, the high-tech vessels are performing operations on large industrial constructions, hence there is a limited range of allowed wind speeds and wave heights. Another factor which can further limit possible schedules is the inflexibility involved in vessel chartering (renting), since vessels of the required caliber cannot be chartered on short notice, making adaptive in-the-moment scheduling is impossible. This means we will have to make decisions significantly in advance, and run the risk of chartering vessels in periods where they might not be able to complete their tasks due to the weather conditions. 
 
-This report will detail the research progress I have made since the completion of my first yearly review, which (due to scheduling issues and delays) was only completed in January 2020. Further on in this section, I will recap the specific parts of this problem that I am looking at (\Cref{ss:prob}), and which research questions I initially posed (\Cref{ss:quest}). Then \Cref{s:know} through  \Cref{s:addit} will talk about the work I have been doing since the last review. Respectively, these sections are about the knowledge gaps I closed, the models I have developed, how I have implemented them, and all additional activities I have taken part in. Finally, \Cref{s:concl} will discuss the next steps for this project. 
+This report will detail the research progress I have made since the completion of my first yearly review, which (due to scheduling issues and delays) was only completed in January 2020. Further on in this section, I will recap the specific parts of this problem that I am looking at (\Cref{ss:prob}), and which research questions I initially posed (\Cref{ss:quest}). Then \Cref{s:know} through  \Cref{s:data} will talk about the work I have been doing since the last review. Respectively, these sections are about the knowledge gaps I closed, the models I have developed, how I have implemented them, my efforts to acquire data, and all additional activities I have taken part in. Finally, \Cref{s:concl} will discuss the next steps for this project. 
 
 \subsection{Problem description} \label{ss:prob}
 This research looks at offshore windfarms (OWFs) and the scheduling decisions made over the entire life-cycle of such an OWF. I will focus on the type of windfarms currently being build in the North Sea \cite{ruk2017,barlow2018mixed}. These windfarms generally consist of up to 150 Wind Turbine Generators (WTGs) and the farms we focus on are located in roughly 50+ kilometers off the coast. The specific duration of each phase of the life-cycle depends on the specific windfarm, but to give the reader some idea of the timescales involved: A typical life-cycle would consist of roughly 2-3 yeas of installation, 20-30 years in which the WTGs generate energy and need to be maintained, and then another 2-3 years in which the turbines are decommissioned. These turbines are large structures that will need to be transported and installed by specialized and expensive vessels, leading to large costs over these years. 
@@ -424,7 +424,7 @@ Equations (32) and (33) are the same as equation (22), this time split for the p
 The strength of this model is that it can be used to plan decisions that need to be made in advance (which vessels to charter and when to schedule certain routine tasks) while considering a set of uncertain scenarios. However it does still assume complete \textit{a priori} knowledge of each of these uncertain factors, as well as the weather. Since the focus lies on the decisions universal to all scenarios, rather than any specific scenario, this might not pose an issue for some uses. The model could potentially be improved by letting the weather conditions (encompassed in $\omega_{i,t}$) also depend on the scenario. The reason I have not done that (yet) is that while developing these models, I have also been implementing at the same time. This is discussed in detail in \Cref{s:impl}. The implementation of the above model already had issues being solved on my computer with a very small test case, and I wanted to improve that before adding more complexity.
 
 \subsection{Multilevel model} \label{ss:multi}
-The above model grew in complexity with every iteration, and since I had reached a point where the implementation could not even solve a very simple testcase in a number of hours (on my personal computer) I attempted a different approach. In the literature multilevel models are common, and splitting the problem into multiple subproblems can reduce the time it takes to solve. My idea behind this model was one level in which large scale decisions are made, such as for which tasks to complete and which vessels to charter for every month. Then a lower level can assign these tasks to specific vessels in some order. 
+The above model grew in complexity with every iteration, and since I had reached a point where the implementation could not even solve a very simple test case in a number of hours (on my personal computer) I attempted a different approach. In the literature multilevel models are common, and splitting the problem into multiple subproblems can reduce the time it takes to solve. My idea behind this model was one level in which large scale decisions are made, such as for which tasks to complete and which vessels to charter for every month. Then a lower level can assign these tasks to specific vessels in some order. 
 
 At the time of writing this model exists in a preliminary form, but it has not been completely tested yet, and there may still be improvements to be made. There are still some aspects of the model that I have not fully decided on, and in this report I will try to explain those aspects. The higher level model I came up with is shown here:
 
@@ -545,19 +545,38 @@ I kept on expanding the implementation of the model while adapting my models bas
 \item The model itself could be inefficient
 \item The implementation could be the problem
 \item My PC might simply not be powerful enough (it has a 3.20 GHz Intel i5-4570 CPU)
-\item The size of the testcase might simply be unrealistic even for an properly implemented efficient model on a state-of-the-art computer
+\item The size of the test case might simply be unrealistic even for an properly implemented efficient model on a state-of-the-art computer
 \end{itemize}
 
 Based on some discussion with my supervisors I decided to mostly focus on improving the model and implementation, and if I got to a point where I could not find new ways to do that we could look into running this on better computers available from the university. Looking for such improvements would be the right first step even if the main problem was my computer, and it is a valuable skill to have experience with. 
 
-One of the most effective ways to reduce the computation times I used was through solving the problem in multiple stages. Instead of giving the solver the full model at once, I would leave out certain constraints at first (not adding them at all, or adding them as cuts), solve the resulting problem, and then add back the full constraint set and solve that problem. The total time of these two solves would often be significantly less than that of the single big solve I used before, likely because the first solve gave the solver a lot of information about the included constraints; information that helped in the second solve. The big question after finding this was selecting which constraints to include in the first solve, and which to leave out. Rather than determining this analytically I experimented with different combinations on small test cases. To facilitate this I build a Mode class in my program that could be used to cycle through modes, solving the same problem for every combination of constraint types excluded from the first solve, and recording the time each solve took. Instead of considering constraints individually I grouped them based on the equation they resulted from; the model in \Cref{sss:comb} can have any number of constraints based on the input, but it will always have 9 constraint types, each represented by one of the equations (22) through (30). Based on the results from small cases I identified which combinations worked best, and those are the settings I would use to solve larger testcases. Using this method, I managed to cut down average computation times for medium testcases roughly in half, and made larger cases for which I could previously not find a solution in 8 hours solvable to optimality in under 4 hours. 
+One of the most effective ways to reduce the computation times I used was through solving the problem in multiple stages. Instead of giving the solver the full model at once, I would leave out certain constraints at first (not adding them at all, or adding them as cuts), solve the resulting problem, and then add back the full constraint set and solve that problem. The total time of these two solves would often be significantly less than that of the single big solve I used before, likely because the first solve gave the solver a lot of information about the included constraints; information that helped in the second solve. The big question after finding this was selecting which constraints to include in the first solve, and which to leave out. Rather than determining this analytically I experimented with different combinations on small test cases. To facilitate this I build a Mode class in my program that could be used to cycle through modes, solving the same problem for every combination of constraint types excluded from the first solve, and recording the time each solve took. Instead of considering constraints individually I grouped them based on the equation they resulted from; the model in \Cref{sss:comb} can have any number of constraints based on the input, but it will always have 9 constraint types, each represented by one of the equations (22) through (30). Based on the results from small cases I identified which combinations worked best, and those are the settings I would use to solve larger test cases. Using this method, I managed to cut down average computation times for medium test cases roughly in half, and made larger cases for which I could previously not find a solution in 8 hours solvable to optimality in under 4 hours. 
 
-While that sounds promising, I was still not able to find solutions for the model on testcases anywhere near the size of the full life cycle. However, considering the size of the model and the problem, and my consumer computer I was using, hoping to solve this was rather ambitious. This is why I chose to scale the problem down and move on to stochastic models (as discussed in the previous section) rather than get stuck trying to solve a problem that would likely never be solvable using my computer. 
+While that sounds promising, I was still not able to find solutions for the model on test cases anywhere near the size of the full life cycle. However, considering the size of the model and the problem, and my consumer computer I was using, hoping to solve this was rather ambitious. This is why I chose to scale the problem down and move on to stochastic models (as discussed in the previous section) rather than get stuck trying to solve a problem that would likely never be solvable using my computer. 
 
 \subsection{A different approach}
 It was while implementing the stochastic model from \Cref{ss:stoc} that I decided to try a different approach; the multilevel model shown in \Cref{ss:multi}. The main reason for this was that I had trouble getting the stochastic elements to work as desired, and I realized a large set of scenarios would be needed to represent 20+ years worth of stochastic events. This did not fully become clear to me until implementing the model, and at the same time I realized how the model would grow significantly with the amount of scenarios. The reason I was focusing on the maintenance phase for this model was to reduce the scale compared to the life-cycle model, but through this growth based on the number of scenarios this problem would not be scaled down. That's when I realized a completely new approach might be needed, and I moved on to the multilevel model. 
 
 This is when the final large programming change happened. Previously every model had followed the same structure, but this model broke that pattern, which required me to do a lot of extra programming for the model to be properly implemented. At the time of writing I have completed that for the two separate levels within this model, but I have not yet made it so the levels are called in succession; this is still something I wish to do in the near future. 
+
+\pagebreak
+
+\section{Data acquisition} \label{s:data}
+In the previous section I talked about implementations being tested; the test cases used for this were all artificially created test cases inspired by real data but heavily simplified. For the purposes I used these test cases for (testing model sanity and computation time) artificial cases are sufficient, but in order to properly compare the models to models from the literature more realistic test cases are needed, and in order to construct these data will be needed. I have identified two main types of data needed, which I call weather data and operational data. 
+
+\bigskip
+
+Weather data is data about the weather circumstances at the site, which can be used to estimate the frequency weather delays and the amount of energy create over a given period. Data used should ideally come from a weather station in very similar weather conditions as the site of the windfarm will be in, and recorded over a long period of time. Many years of data are needed to accurately assess seasonal characteristics of the weather, and this data can contain many weather characteristics such as wave height, wind speed, wind direction, etc. 
+
+At the end of my first year review one of my immediate goals was to attempt to get access to data for my future testcases, and since then I have gained access to the data from the FINO1 and FINO3 stations. The FINO1 station \cite{fino1} is the primary station I aim to use as it is more commonly used in the literature \cite{barlow2018mixed,dinwoodie2015reference}. This station is positioned in the North Sea, roughly 45 kilometres off the cost of Germany. This station has been active since 2003 which means many years of data are available, from a location representative of the location of the type of windfarm focused on in my research. 
+
+\bigskip
+
+Operational data is the data about the windfarm, the vessels, and the tasks that need to be performed. If the model is used in an industrial context this data would obviously be specified by the user, as it is specific to the project the model would be used for. However, in order to answer the research questions some realistic data is needed to populate the simulations. If I can get data from case studies used in other research projects, that might allow for some comparison between my models and the models from those projects. 
+
+Currently I have access to some operational data regarding the installation tasks, which my supervisors used for their research in \cite{barlow2018mixed} and \cite{barlow2017using}. In \cite{leontaris2016probabilistic} a case study of a OWF with 55 WTGs is used. This case study was provided by Van Oord, a Dutch company developing offshore windfarms. I will attempt to contact the authors and Van Oord to see if I can get access to this data. However I have not done this yet, as I wanted to have a more sophisticated model before contacting them, as the model dictated which specific data is required, and I wanted to avoid having to contact them multiple times if my required data changed. 
+
+These case studies all have to do with the installation phase, but in order to answer my research questions I need data from the other phases of the life cycle too, and ideally have data from a windfarm over the whole life-cycle. This will likely be difficult, as it requires the life-cycle to have finished, which (given the 20-30 years length of their life-cycles) means the windfarm could be too outdated for the data to be accurate for current windfarms. Therefore I am aiming to get accurate recent data about the maintenance, and estimates regarding decommission. To accomplish this I will contact OWF operators for cooperation. The OWEZ windfarm has previously provided data for other studies, such as \cite{dinwoodie2012analysis}, so I am hopeful this or other windfarms will help me acquire the data I need. 
 
 \pagebreak
 
