--- a/2nd year report/mybib.bib
+++ b/2nd year report/mybib.bib
@@ -518,3 +518,11 @@
   year={2019},
   organization={IEEE}
 }
+
+@manual{fino1,
+      title  = "FINO 1 Meteorological Dataset",
+      url    = "http://www.fino1.de/en/",
+      year   = "2020",
+     institution = "Bundesministerium fuer Umwelt",
+     note = "Accessed October 19, 2020"
+    }
