Rewrote final section based on feedback

--- a/2nd year report/Year2report.tex
+++ b/2nd year report/Year2report.tex
@@ -92,7 +92,7 @@ For the past two years, I have been researching logistics related to offshore wi
 
 The complexity with these logistics comes from various factors, the first being the severe impact that weather conditions can have on when operational tasks can be completed. These projects take place on open sea, where weather can often be rougher than on land. In addition, the high-tech vessels are performing operations on large industrial constructions, hence there is a limited range of allowed wind speeds and wave heights. Another factor which can further limit possible schedules is the inflexibility involved in vessel chartering (renting), since vessels of the required caliber cannot be chartered on short notice, making adaptive in-the-moment scheduling is impossible. This means we will have to make decisions significantly in advance, and run the risk of chartering vessels in periods where they might not be able to complete their tasks due to the weather conditions. 
 
-This report will detail the research progress I have made since the completion of my first yearly review, which (due to scheduling issues and delays) was only completed in January 2020. Further on in this section, I will recap the specific parts of this problem that I am looking at (\Cref{ss:prob}), and which research questions I initially posed (\Cref{ss:quest}). Then \Cref{s:know} through  \Cref{s:data} will talk about the work I have been doing since the last review. Respectively, these sections are about the knowledge gaps I closed, the models I have developed, how I have implemented them, my efforts to acquire data, and all additional activities I have taken part in. Finally, \Cref{s:concl} will discuss the next steps for this project. 
+This report will detail the research progress I have made since the completion of my first yearly review, which (due to scheduling issues and delays) was only completed in January 2020. Further on in this section, I will recap the specific parts of this problem that I am looking at (\Cref{ss:prob}), and which research questions I initially posed (\Cref{ss:quest}). Then \Cref{s:know} through  \Cref{s:data} will talk about the work I have been doing since the last review. Respectively, these sections are about the gaps in my own knowledge that I closed, the models I have developed, how I have implemented them, my efforts to acquire data, and all additional activities I have taken part in. Finally, \Cref{s:concl} will discuss the next steps for this project. 
 
 \subsection{Problem description} \label{ss:prob}
 This research looks at offshore windfarms (OWFs) and the scheduling decisions made over the entire life-cycle of such an OWF. I will focus on the type of windfarms currently being build in the North Sea \cite{ruk2017,barlow2018mixed}. These windfarms generally consist of up to 150 Wind Turbine Generators (WTGs) and the farms we focus on are located in roughly 50+ kilometers off the coast. The specific duration of each phase of the life-cycle depends on the specific windfarm, but to give the reader some idea of the timescales involved: A typical life-cycle would consist of roughly 2-3 yeas of installation, 20-30 years in which the WTGs generate energy and need to be maintained, and then another 2-3 years in which the turbines are decommissioned. These turbines are large structures that will need to be transported and installed by specialized and expensive vessels, leading to large costs over these years. 
@@ -142,7 +142,7 @@ Can considering the long-term effects of logistical decisions early on in the li
 
 \pagebreak
 
-\section{Closing knowledge gaps}\label{s:know}
+\section{Closing learning gaps}\label{s:know}
 During my first yearly review it was remarked that most of my reading up to that point focused on either methodology or installation projects, and there were gaps concerning the other two phases, primarily maintenance. Over the past months I have worked to close these gaps, and I consistently updated the literature review as I gained knowledge. This section will show the highlights of that updated literature review, and I will give some closing thoughts on these new insights at the end. 
 
 \subsection{The maintenance phase} \label{ss:maint}
@@ -604,27 +604,40 @@ As is hopefully evident from the previous sections, a lot of progress has been m
 
 I'm happy with this progress, especially since there were also some delays following the Covid-19 pandemic. A lot of the hassle with trying out free MIP solver libraries could have been avoided if I had been working from university, and when the lockdown first started in March it took me a couple of weeks to adjust and develop a good working routine from home. That said, once I settled into a routine I managed to work rather productively, which is why I made quite a lot of progress over these past months. 
 
-\subsection{Next steps}
+\subsection{The next step}
 As the basis of my knowledge (of the literature, modeling, and implementation) is now fairly solid, and I have a basis of experience with the main methods used, the next steps will focus on producing new knowledge and attempting to answer the research questions posed in \Cref{ss:quest}. In the following months I will specifically focus on the first subquestion:
 
 \sqa* 
 
-This overlap of resources is the phenomenon already included in the combined model from \Cref{sss:comb}, and my aim is to create a model that focuses in on the overlap between two phases. At the moment I have a few possible approaches in mind to design such a model, and I will have to do research and experiments to determine which approach works best in practice. One of the key design decisions on which approaches can differ is whether the overlapping phases are scheduled by a single model, or by separate models (a decomposed approach). For example, if looking at the overlap between the installation and maintenance phases, we could choose to create a novel model to schedule this entire overlapped period, or we could use a dedicated installation scheduling model (from the literature) and create a novel model which takes this installation schedule as an input, and which schedules the maintenance tasks without affecting the installation tasks. This latter model would still be a novel approach to maintenance, as it has to deal with turbines coming online gradually. This new maintenance model could serve until installation is complete, after which an already existing maintenance model can be used to determine a maintenance strategy for the rest of the lifespan (or until decommission starts, after which a blended approach can be used again). 
+This overlap of resources is the phenomenon already included in the combined model from \Cref{sss:comb}, and my aim is to create a model that focuses in on the overlap between two phases, in order to help answer this question. I plan to develop a model that performs "installation-aware" maintenance, i.e. that is aware of an installation project happening at the same time, with which it shares resources, and which gradually increases the amount of online turbines which may require maintenance. In this the installation schedule will be treated as a fixed input, and the goal is to see if allowing the maintenance schedule to adapt to this schedule results in new optimizations. In order to make this comparison we need an installation schedule, and a maintenance schedule/strategy that is "installation-unaware". My plan is to try and find historical schedules, either in the literature or by contacting windfarm operators, to use as input and comparison material. In case I am unable to find satisfactory historical schedules this way, my backup plan is to generate them myself, adapting the models I have already created to suit this specific use. 
 
-Which of these approaches works best depends cannot be said yet, and will depend on the circumstances. Decomposed approaches generally reduce computational time, but allowing installation decisions to be affected might allow for more optimizations. Therefore the way I plan to research this is by first attempting a model that plans both installation and maintenance tasks, but if this turns out to be too computationally intensive the installation tasks can be fixed (at values determined by a separate model from the literature). The choice would be to fix the installation tasks rather than the maintenance ones as installation will be significantly more costly than the maintenance over this period; installation will use expensive specialized vessels for every turbine, while maintenance of that scale will not be necessary on most turbines in the first few years. After a model such as this is made for the overlap between installation and maintenance, a very similar model can likely be made for the overlap between decommission and maintenance. 
+In this approach I choose to fix the installation schedule rather than the maintenance schedule, as the installation is likely to incur significantly more costs over these first years of the lifespan.  Installation will use expensive specialized vessels for every turbine, while maintenance of that scale will not be necessary on most turbines in the first few years. This makes it less adaptable, as any improvement gained from maintenance is likely outweighed by extra installation costs incurred. Therefore having a maintenance schedule adapt to an installation schedule seems more likely to give interesting results. 
 
-If this research direction proves fruitful, our goal is to put these findings the novel model(s) in a paper to be published. 
+\bigskip
 
-\subsection{Timeline}
-The current goal is to get that first research question sufficiently answered in the next few months, ideally before March. After that there are the other two questions left:
+What I described above is the minimum goal in order to answer the question, but there are two other thing I hope to try if time permits. The first is a fully integrated installation-maintenance model; in this the installation would no longer be treated as a fixed input but it would also be part of the problem to solve. This allows the installation schedule to be affected by the maintenance schedule, and vise versa. This model would be significantly more complex than the above model, both in difficulty of development as well as computationally, which is why I would only develop this model after the previously described model has been completed. 
+
+The other potential direction to investigate if possible, is the overlap between decommission and maintenance. Since installation and decommission are very similar phases, these models could likely be fairly similar, which would make it easier to develop. The key difference will be the shift in focus; instead of getting the turbines online as fast as possible, the main way to increase the value will be opportunistic decommission by decommissioning turbines after a failure instead of repairing that failure. 
+
+Of these two extra research directions, I plan to pursue the integrated installation-maintenance model before looking at decommission as well, as the best way to approach the decommission question seems to be through a similar integrated approach. 
+
+\bigskip
+
+If these research direction proves fruitful, our goal is to put these findings the novel model(s) in a paper to be published, as well as a chapter of my thesis. 
+
+The current goal is to get that first research question sufficiently answered in the next few months, ideally before March 2021. The exact timings will be unpredictable, as a lot will depend on whether models needs to be developed and implemented for the installation schedules and "installation-unaware" schedules, or whether these can be taken from historical data. This will inform which of the extra directions are feasible to be investigated within the timeframe, as well as the actual completion times of each of the phases on the path to answering the question. That said, I currently aim to have the initial models completed by end of November. This would include the "installation-aware" maintenance model as well as any of other models that may need to be created (or otherwise have access to historical schedules by this point). Then over December these models will be implemented, allowing for refinement of both the models and implementation over January. This implementation also includes construction of test cases and acquisition of any required data not yet accessible. Then finally over February and March analysis can be done, and I can write up my findings in a thesis chapter, and paper, if the results are significant enough to allow for a paper to be published. 
+
+\subsection{Later steps}
+
+After that there are the other two questions left:
 
 \sqb*
 
 \sqc*
 
-Since these observe the same phenomenon, they can likely be researched through similar models. From March on, my focus will be on these two joint questions. Exactly which approach to take will have to be decided on later, but the topic appears to lend itself for a simulation approach. A key thing to focus on is how the failure rate of turbines changes over the course of their lifespan. Some research has already been found on this changing failure rate \cite{carroll2015offshore,papatzimos2019data}, which will be useful in my future research on this. My hope is that this aspect of the research can produce another paper. 
+Since these observe the same phenomenon, they can likely be researched through similar models. From March on, my focus will be on these two joint questions. Exactly which approach to take, and what the exact timeline will look like, will have to be decided later on, but the topic appears to lend itself for a simulation approach. A key thing to focus on is how the failure rate of turbines changes over the course of their lifespan. Some research has already been found on this changing failure rate \cite{carroll2015offshore,papatzimos2019data}, which will be useful in my future research on this. My hope is that this aspect of the research can produce another paper, and at least it will form (an) extra chapter(s) for my thesis. 
 
-Once this part of the research is also complete, which I hope to be around summer 2021, I will have satisfying answers to each of my sub-questions, at which point I can write my thesis and answer the main research question
+Once this part of the research is also complete, which I hope to be around summer 2021, I will have satisfying answers to each of my sub-questions, at which point I can finish writing my thesis and answer the main research question
 
 \rquest
 
