--- a/2nd year report/Year2report 1.0.tex
+++ b/2nd year report/Year2report 1.0.tex
@@ -132,7 +132,7 @@ Can considering how phases in the life-cycle of a windfarm overlap and share res
 
 \begin{restatable}{subquestion}{sqb}
 \label{sqb}
-Can simulating the entire life-cycle of a windfarm provide useful data to base logistical decisions on in the later phases of these projects?
+Can considering the entire life-cycle of a windfarm provide useful data to base logistical decisions on in the later phases of these projects?
 \end{restatable}
 
 \begin{restatable}{subquestion}{sqc}
@@ -171,7 +171,7 @@ In \cite{shafiee2015maintenance} the different topics that fall under maintenanc
 \end{itemize}
 \end{enumerate}
 
-Decisions within the strategic echelon are found to have the biggest impact on the costs of operations, which makes sense as they affect the largest amount of time. However each of these echelons include important decisions that will have to be made for the maintenance of the sites. Besides providing this framework to categorize research, they also highlight which areas appear most thoroughly researched, and identify some unexplored areas. Potentially due to their large impact, the topics within the strategic echelon have received most attention, while the topics in the operational echelon received least. The writers indicate they these shorter term areas might hold unexplored potential for future research. 
+Decisions within the strategic echelon are found to have the biggest impact on the costs of operations, which makes sense as they affect the largest amount of time. However each of these echelons include important decisions that will have to be made for the maintenance of the sites. Besides providing this framework to categorize research, they also highlight which areas appear most thoroughly researched, and identify some unexplored areas. Potentially due to their large impact, the topics within the strategic echelon have received most attention, while the topics in the operational echelon received least. The writers indicate that these shorter term areas might hold unexplored potential for future research. 
 
 For my research the most relevant topics are Maintenance strategy selection and maintenance scheduling. These are categorized in opposite echelons, but considering my research focus this makes sense. I am looking at reducing lifetime costs, which clearly falls in the strategic echelon. Specific ideas related to this are considering the long-term impact of decisions and considering historical data from the windfarm. However in order to reduce these costs I am also looking at specific stretches of time within the lifetime, such as when the maintenance phase overlaps with the installation or decommission phases, and specific small-scale decisions made within these stretches of time. This focus clearly falls within the operational echelon, which means different aspects of my research fall within different echelons. 
 
