--- a/Slides Annual Review 2020/ReviewYear2.tex
+++ b/Slides Annual Review 2020/ReviewYear2.tex
@@ -59,7 +59,7 @@ Can considering how phases in the life-cycle of a windfarm overlap and share res
 \end{subquestion}
 
 \begin{subquestion}
-Can simulating the entire life-cycle of a windfarm provide useful data to base logistical decisions on in the later phases of these projects?
+Can considering the entire life-cycle of a windfarm provide useful data to base logistical decisions on in the later phases of these projects?
 \end{subquestion}
 
 \begin{subquestion}
@@ -134,21 +134,22 @@ Can considering how phases in the life-cycle of a windfarm overlap and share res
 \begin{itemize}
 \item Build simulation model for the life-cycle
 \item Use this model to answer other sub-questions
-\item Consider failure rate informed by individual history of turbine
+\item Consider failure rate informed by individual (predicted) history of turbine
 \end{itemize}
 
 \bigskip
 
 \begin{itemize}
 \item Hopefully publish any significant results found
-\item Finish up writing
+\item Finalize writing
+\item Complete the project in the next 12 months
 \end{itemize}
 
 \bigskip
 
 \pause
 \begin{center}
- Thank you for listening, any questions?
+ Thank you for listening!
 \end{center}
 \end{frame}
 
