--- a/2nd year report/Year2report 1.0.tex
+++ b/2nd year report/Year2report 1.0.tex
@@ -239,7 +239,7 @@ In the past year I have started developing optimisation models for various sched
 
 I started with very simple models that had a small scope and many assumptions, and progressively added complexity while relaxing the assumptions. This provided me with practice and insights in optimization modeling, a technique I had previously extensively read about but not used myself on any large scale. Therefore this start with simple models was needed, and this approach has made me learn a lot about the nuances in creating these models. 
 
-All models I created are Mixed-Integer Linear Programming (MILP) models, meaning the variables can both be continuous or integer variables, and every variable has a linear relation with the objective and the constraints (i.e. no variables are multiplied by other variables). This is the type of models most commonly used in the scheduling literature I have come across, indicating they are generally well-suited for these this type of problem. 
+All models I created are Mixed-Integer Linear Programming (MILP) models, meaning the variables can both be continuous or integer variables, and every variable has a linear relation with the objective and the constraints (i.e. no variables are multiplied by other variables). This is the type of models most commonly used in the scheduling literature I have come across, indicating they are generally well-suited for this type of problem. 
 
 It is also worth noting that each of the models shown in this section represents a stage in my development as a researcher and as someone designing model. For that reason the models shown, especially the early ones, can likely be refined further. Since this report is about my work and progress I opted to not to go back to my older models and refine them extensively with the experience I gained since making them originally. 
 
