--- a/Slides Annual Review 2020/ReviewYear2.tex
+++ b/Slides Annual Review 2020/ReviewYear2.tex
@@ -34,13 +34,13 @@
 \begin{frame}{The project}
   \begin{itemize}
   	\item Improve scheduling logistics of operations on modern windfarms in the North Sea
-  	\item Literature tends to split the life-cycle in three phases
+  	\item Large industrial vessels used for major operations; small improvements can lead to large savings
+  	\item Literature tends to split the life-cycle in three phases:
   	\begin{itemize}
   		\item Installation (\textapprox  2-3 years)
   		\item Maintenance (\textapprox 15-25 years)
   		\item Decommission (\textapprox 2-3 years)
   	\end{itemize}
-  	\item Large industrial vessels used for major operations; small improvements can lead to large savings
 	\item Most research in literature chooses a phase to focus on; my work looks at how the phases interact
   \end{itemize}
 \end{frame}
@@ -132,8 +132,8 @@ Can considering how phases in the life-cycle of a windfarm overlap and share res
 
 \begin{frame}{Later work}
 \begin{itemize}
-\item Build simulation model for the life-cycle
-\item Use this model to answer other sub-questions
+\item Build (simulation) model(s) for the life-cycle
+\item Use this to answer both other sub-questions
 \item Consider failure rate informed by individual (predicted) history of turbine
 \end{itemize}
 
